# neuralsort

./: .gitignore  README.md
anomaly/src/: check_multi_listed.py  eoddata_import.py  settings.py
data/: .gitignore  av_api_state.json  clean.db
data/ib/: AppDownloadSP500_data.180604_141057.p  AppDownloadSP500_data.180604_142438.p  AppDownloadSP500_data.180604_143755.p  AppDownloadSP500_data.180604_144001.p  AppDownloadSP500_data.180604_150907.p  AppDownloadSP500_data.180604_151508.p  AppDownloadSP500_data.180604_152822.p  AppDownloadSP500_data.180604_154006.p  AppDownloadSP500_data.180604_161242.p  AppDownloadSP500_data.180605_051517.p
doc/latex/: .gitignore  root.out
next/data/: .gitignore  eoddata  quandl
next/presentation/: cites.bib  root.blg  root.fls  root.nav  root.tex
next/src/: bar.py  notes.py  settings.py
notes/: actor_critic.dot  complete.dot  filter.dot  mdp.dot  pdflatex35962.fls  rebuild.dot  root.aux  root.fdb_latexmk  root.fls  root.out  root.tex  update.dot  update_type.dot
notes/squeeze-excite/: pdflatex11447.fls  root.aux  root.fdb_latexmk  root.fls  root.out  root.tex  se.dot  se.dot.aux
presentation/: root.aux  root.bbl  root.fdb_latexmk  root.snm
realtime/: .gitignore  conanfile.txt  data
realtime/src/: .clang-format  CMakeLists.txt  compile_commands.json  conanbuildinfo.cmake  conaninfo.txt
realtime/src/.clangd/index/: ArpLayer.h.A188F2A31BC05695.idx  Device.h.1E9F439CF611C947.idx  IpAddress.h.6A5DE669C160B9ED.idx  Layer.h.A72B9EA62F4E9ADB.idx  MacAddress.h.8CC90FAA97DC5C55.idx  Packet.h.B56D7BFA74468F22.idx  PayloadLayer.h.7611352C6EC18997.idx  PcapDevice.h.6B7D4B7EF910334B.idx  PcapFileDevice.h.57751D1D14500BD9.idx  PcapFilter.h.C1A7107DE5CB27B7.idx  PointerVector.h.4F0B0B9B22882676.idx  ProtocolType.h.F0EEB4F1260DD21C.idx  RawPacket.h.76419EBB93C87AC8.idx  __locale_t.h.3F73A78C1398A1A9.idx  __stddef_max_align_t.h.03FD6CC0FA34F237.idx  algorithm.B28D11DF92F71D35.idx  algorithmfwd.h.B79F76FD65EECA3C.idx  aligned_buffer.h.B0DD870D82F7AC9F.idx  alloc_traits.h.54B9502C02F34B53.idx  alloc_traits.h.7DB995B4428B7A0A.idx  alloc_traits.h.AAFD6EEB1BDB1386.idx  alloc_traits.h.B7E78DA414F2A4C1.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.AAD89804CEEFFBFD.idx  allocator.h.AC086B3EEE9C4E6A.idx  allocator.h.E0196978A9BC356A.idx  array.2D04E586BBD00F31.idx  assert.hpp.476AC60D55F8C818.idx  assertions.h.036168472124E8BA.idx  assertions.h.209A52F6FF6D0A50.idx  atomic_base.h.686F58735FDBF3C6.idx  atomic_lockfree_defines.h.1FF6ECCD3E393BFF.idx  atomic_word.h.495603EE5690EF15.idx  atomic_word.h.A9E9C2F5878B99D8.idx  atomicity.h.0584EA1EB7AC12FE.idx  atomicity.h.7B31D80358A17C8D.idx  auto_ptr.h.1DCFC8E508B6D02A.idx  basic_ios.h.70298DF7C7A79EC0.idx  basic_ios.h.AB4DA71B9D7F0AD6.idx  basic_ios.tcc.929710E39B684BE5.idx  (+303 more)
realtime/src/client/: CMakeLists.txt  common.hpp  iex_decoder.cpp  iex_decoder.hpp  iex_downloader.cpp  iex_downloader.hpp  iex_hist_list.cpp  iex_hist_list.hpp  iex_message.cpp  iex_message.hpp  main_linux.cpp
realtime/src/ibclient/: check_symbols.py  import_hist.py  import_watch.py  settings.py  stream_capture.py
realtime/src/iex_client/: CMakeLists.txt  common.hpp  decoder.cpp  decoder.hpp  downloader.cpp  downloader.hpp  idownloader.cpp  idownloader.hpp  main_linux.cpp  message.cpp  message.hpp  test.py
realtime/src/iex_client/debug/: CMakeLists.txt  assert.hpp  debug_break.hpp
realtime/src/python/: main.py
realtime/src/strategies/: '  backtest_pipeline.py  ema.py  filter.py-old  iex_import.py  macd.py  macd2.py  settings.py  strategy.py  strategy_runner.py  ticker_filter.py
realtime/src/strategies/analysis/: message_count.py
realtime/src/strategies/dashboard/: main.py  main_window.py
realtime/src/strategies/naive/: main.py
src/: Digraph.gv  Untitled.ipynb  Untitled1.ipynb  dot1.gv  eod_database_import.py  eod_qdl_compare.py  eoddata_import.py  foo.py  gram3.py  moving_average.py  nsort.py  params.db  predicted_import.py  quandl_import.py  set_python_path.sh  settings.py  sp500_import.py  ticker_filter.py  trading_days.json  transform.py  vix_import.py
src/alphavantage_databuilder/: adj_returns.py
src/analysis/: flat_gaussianize.py  pres1.py
src/augment/: gan1.py  gan2.py  gan3.py
src/data_import/: eod_database_refresh.py  (+4 more)
(+195 files in other folders)
